--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </section>
 
 
-        <script src="../../code.jquery.com/jquery-2.2.4.min.js"></script>
+        <script src="static/jquery-2.2.4.min.js"></script>
         <script src="static/script.js"></script>
     </body>
 
