--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div id="gamecont" style="width:730px;height:500px;margin:0 auto;">
                     <object class="gmr" width="100%" height="100%">
                         <param name="movie" value="swf/breakout10h.swf">
-                        <embed src="breakout10h.html" class="gmr" width="100%" height="100%">
+                        <embed src="swf/breakout10h.html" class="gmr" width="100%" height="100%">
                         </embed>
                     </object>
                 </div>
