--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <div id="game">
                 <div id="gamecont" style="width:730px;height:500px;margin:0 auto;">
                     <object class="gmr" width="100%" height="100%">
-                        <param name="movie" value="swf/breakout10h.swf">
-                        <embed src="swf/breakout10h.swf" class="gmr" width="100%" height="100%">
+                        <param name="movie" value="swf/latest.swf">
+                        <embed src="swf/latest.swf" class="gmr" width="100%" height="100%">
                         </embed>
                     </object>
                 </div>
