Should be pretty cool now :)

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang='en'>
-    
-<!-- Mirrored from sebweb.co.uk/bonk/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 24 Dec 2017 18:56:39 GMT -->
-<head>
+    <head>
         <title>Bonk Leagues</title>
 
         <meta charset='utf-8'>
@@ -14,7 +12,7 @@
         <link rel="canonical" href="https://bonkleagues.github.io/" />
         <meta property="og:url" content="https://bonkleagues.github.io/" />
         <meta property="og:site_name" content="Bonk Leagues" />
-        <meta property="og:image" content="../../bonkleagues.github.io/logo.html" />
+        <meta property="og:image" content="https://bonkleagues.github.io/logo.png" />
         <meta name="theme-color" content="#013e79">
 
         <link rel="icon" type="image/png" href="static/logo.png">
@@ -37,15 +35,15 @@
         <section>
             <div id="instructions">
                 <span class="parthead" id="insthead">Instructions</span></br><br/>
-                <p style="font-weight:bold;" id="steptxt1">Before you are able to play Bonk Leagues, there are some instructions you have to follow.</p>
+                <p style="font-weight:bold;" id="steptxt1">Before you are able to download and play Bonk Leagues, there are some instructions you have to follow.</p>
                 <p id="steptxt2">Don't worry! It won't take long. There are only <b>4</b> simple steps to take.</p>
                 <br/>
             </div>
             <div id="game">
                 <div id="gamecont" style="width:730px;height:500px;margin:0 auto;">
                     <object class="gmr" width="100%" height="100%">
-                        <param name="movie" value="swf/latest.swf">
-                        <embed src="swf/latest.swf" class="gmr" width="100%" height="100%">
+                        <param name="movie" value="file:///C:\xampp\htdocs\bonkleagues-sites\swf\breakout10h.swf">
+                        <embed src="file:///C:\xampp\htdocs\bonkleagues-sites\swf\breakout10h.swf" class="gmr" width="100%" height="100%">
                         </embed>
                     </object>
                 </div>
@@ -53,11 +51,10 @@
             </div>
             <a id="button">⇒ Play Now ⇐</a>
             <br/><br/>
-            <a id="instskip" style="cursor:pointer;display:none;">Skip instructions</a>
             <br/><br/><br/>
             <div id="info">
                 <span class="parthead">What is it?</span></br><br/>
-                <p style="font-weight:bold;">Bonk Leagues is an open source modified version of the popular game <a href="http://bonk.io/" target="_blank">bonk.io</a>.</p>
+                <p style="font-weight:bold;">Bonk Leagues is an open source modified version of the popular game <a href="http://bonk.io" target="_blank">bonk.io</a>.</p>
                 <p>Bonk Leagues is community-run and offers many unique features that bonk.io itself does not</a>.</p>
                 <br/>
                 <span class="parthead">Features</span></br>
@@ -74,9 +71,7 @@
         </section>
 
 
-        <script src="static/jquery-2.2.4.min.js"></script>
+        <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <script src="static/script.js"></script>
     </body>
-
-<!-- Mirrored from sebweb.co.uk/bonk/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 24 Dec 2017 18:56:42 GMT -->
 </html>
