Adding final touches and stuff in preparation for Skin Manager release in about an hour :)

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
             <br/>
             <nav>
                 <a class="sel" href="index.html">Home</a>
-                <a id="plybut">Play</a>
+                <a href="skins.html">Skin Manager</a>
                 <a href="https://discord.gg/A5zpj2a" target="_blank">Discord</a>
-                <a href="https://github.com/BonkLeagues/Bonk-Leagues" target="_blank">GitHub</a>
             </nav>
         </header>
         <section>
@@ -39,7 +38,12 @@
                 <p id="steptxt2">Don't worry! It won't take long. There are only <b>4</b> simple steps to take.</p>
                 <br/>
             </div>
-            <a id="button">⇒ Play Now ⇐</a>
+            <!--<a id="button">⇒ Play Now ⇐</a>-->
+            <b>
+            The Bonk Leagues client will be released very Soon<sup>TM</sup><br/>
+            <span style="font-weight:400">To stay updated on the client's development, you can join the <a href="https://discord.gg/5SB5fYm" target="_blank">M4K Bonk.io Discord Server</a>.<br/><br/>
+            Meanwhile, you can use our useful <a href="skins.html">Skin Manager</a>.</span>
+            </b>
             <br/><br/>
             <br/><br/><br/>
             <div id="info">
@@ -49,15 +53,11 @@
                 <br/>
                 <span class="parthead">Features</span></br>
                 <ul>
-                    <li>✓ Skin-stealing</li>
-                    <li>✓ Custom servers</li>
-                    <li>✓ Easy XP Farming</li>
-                    <br/>
-                    <li style="margin-left:20px;"><i>And much more to come in the future...</i></li>
+                    <li style="margin-left:20px;"><i>Bonk Leagues will include many useful and helpful features, such as custom servers, enhanced gameplay, and more community features.</i></li>
                 </ul>
             </div>
 
-            <span style="position:fixed;bottom:15px;right:15px;font-size:14px;z-index:998;">website by Finbae</span>
+            <span style="position:fixed;bottom:15px;right:15px;font-size:16px;z-index:998;">website by Finbae<span style="font-size:11px;color:#666;">#2180</span></span>            
         </section>
 
 
