SKIN MANAGER - may still be a bit buggy

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <br/><br/><br/>
             <div id="info">
                 <span class="parthead">What is it?</span></br><br/>
-                <p style="font-weight:bold;">Bonk Leagues is an open source modified version of the popular game <a href="http://bonk.io" target="_blank">bonk.io</a>.</p>
+                <p style="font-weight:bold;">Bonk Leagues is a modified version of the popular game <a href="http://bonk.io" target="_blank">bonk.io</a>.</p>
                 <p>Bonk Leagues is community-run and offers many unique features that bonk.io itself does not</a>.</p>
                 <br/>
                 <span class="parthead">Features</span></br>
