--- a/skins.html
+++ b/skins.html
@@ -16,7 +16,7 @@
         <meta name="theme-color" content="#013e79">
 
         <link rel="icon" type="image/png" href="static/logo.png">
-        <link rel='stylesheet' type='text/css' href='static/skinstyle.css'>
+        <link rel='stylesheet' type='text/css' href='static/skinstyle.css#v2'>
     </head>
     <body>
         <header>
@@ -34,7 +34,7 @@
         <section>
             <div id="loggedin">
                 <h1>WELCOME, <span class="s-name">X</span>!</h1><br/><br/>
-                <span class="parthead">My Skins</span></br><br/>
+                <span class="parthead">My Skins</span><br/><br/>
                 <p id="txt-skin1" style="display:none">You have no saved skins yet. You can use the plus button to add one!<br/><br/>We recommend adding your current skin first.</p>
                 <div class="skincont" style="display:inline-block"></div><div class="skinslot" data-skin="addskin"><span>+</span></div>
                 <br/>
@@ -50,7 +50,7 @@
             </div>
 
             <div id="addskin">
-                <span class="parthead">Add skin from...</span></br><br/>
+                <span class="parthead">Add skin from...</span><br/><br/>
                 <div class="skinchoice" data-choice="1">
                     <img src="static/icon2.png" width="64">
                     <div>
@@ -77,7 +77,8 @@
             </div>
 
             <div id="addskin2">
-                <span class="parthead">Adding skin</span></br><br/>
+                <span class="parthead">Adding skin</span><br/><br/>
+                <iframe id="sknframe2" class="sknframe"></iframe><br/><br/>
                 <b>What would you like to name this skin?</b><br/><br/>
                 <input type="text" id="skn" maxlength="30" size="30" value="Skin"><br/>
                 <a id="svskin" class="button" style="font-size:24px;padding:5px 10px;margin-right:15px">Save Skin!</a><a class="button cancel" data-cancel="addskin2" style="font-size:24px;padding:5px 10px;">Cancel</a><br/><br/>
@@ -85,13 +86,14 @@
             </div>
 
             <div id="editskin">
-                <span class="parthead">Editing skin</span></br><br/>
+                <span class="parthead">Editing skin</span><br/><br/>
+                <iframe id="sknframe" class="sknframe"></iframe><br/><br/>
                 Skin name: <input type="text" id="skne" maxlength="30" size="30"><br/><br/>
                 <a id="skncode" class="button" style="font-size:24px;padding:5px 10px;animation:none;">Get Skin Code</a>
                 <a id="aplskin" class="button" style="font-size:24px;padding:5px 10px;animation:none;">Apply skin on Bonk.io</a>
                 <br/><br/>
                 <a id="edskin" class="button" style="font-size:24px;padding:5px 10px;margin-right:30px;animation:none;">Done</a><a id="delskin" class="button" style="font-size:24px;padding:5px 10px;margin-left:-10px;animation:none;">Delete Skin</a><br/><br/>
-                <p style="font-style:italic;font-size:12px">Tip: You can share your skin code (press 'get skin code' button to do this!) with a friend and<br/>then they will be able to use your skin in the Skin Manager too! :)</p>
+                <p style="font-style:italic;font-size:12px">Tip: You can share your skin code (press 'get skin code' button to do this!) with a friend and<br/>then they will be able to use your skin in the Skin Manager too! :)<br/><br/>ps. credit to its_magic for the skin previews &lt;3!</p>
             </div>
 
             <div id="instructions">
@@ -104,19 +106,21 @@
             <a id="button" class="button">Login with Bonk.io</a>
             <br/><br/><br/><br/>
             <div id="info">
-                <span class="parthead">Info</span></br>
+                <span class="parthead">Info</span><br/>
                 <p style="font-weight:bold;">Welcome to the Bonk Leagues Skin Manager! To start, log in above.</p>
                 <p>Here you can save, load, manage and share unlimited amounts of skins for bonk.io.</p>
                 <p>You can also store multiple skins and transfer them accross accounts!</p>
                 <br/><br/>
-                <span class="parthead">Feedback</span></br>
+                <span class="parthead">Feedback</span><br/>
                 <p>The Bonk Leagues Skin Manager is still not <b>fully</b> complete, and may be buggy at the moment.</p>
                 <p>If you encounter a bug, or want to give feedback, message @Finbae#2180 in the <a href="https://discord.gg/5SB5fYm" target="_blank">M4K Bonk.io Discord Server</a></p>
                 <p>Also, we are looking for any good skin makers to make some skins for the upcoming sample skins page (you will be credited!)</p>
             </div>
 
             <!--
-               ALSO DO STUFF FINAL TOUCHES
+               skins
+               chaz: CgcDYQACCR0BAQEBAQEBAQoHBWFsAAEADT3MzM0AAAAAAAAAAAAAAAAAAAAAAAAKBQABAA0+TMzNAAAAAAAAAAAAAAAAAAAA+vr6CgUAAQANPpmZmgAAAAAAAAAAAAAAAAAAAAAAAAoFAAEASz4ZmZpCtAAAwKAAAAAAAAAAAAAAAAAKBQABAEs+GZmaQrQAAECgAAAAAAAAAAAAAAAACgUAAQBNPoAAAEK0AAAAAAAAAAAAAAAAAPr6+goFAAEADT9MzM0AAAAAAAAAAAAAAAAAAADGKCgAAAAA
+
             -->
 
             <span style="position:fixed;bottom:15px;right:15px;font-size:16px;z-index:998;">website by Finbae<span style="font-size:11px;color:#666;">#2180</span></span>
@@ -125,6 +129,6 @@
 
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <script src="static/md5.js"></script>
-        <script src="static/skinscript.js"></script>
+        <script src="static/skinscript.js#v2"></script>
     </body>
 </html>
