--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="canonical" href="https://bonkleagues.github.io/" />
         <meta property="og:url" content="https://bonkleagues.github.io/" />
         <meta property="og:site_name" content="Bonk Leagues" />
-        <meta property="og:image" content="https://bonkleagues.github.io/logo.png" />
+        <meta property="og:image" content="https://bonkleagues.github.io/static/logo.png" />
         <meta name="theme-color" content="#013e79">
 
         <link rel="icon" type="image/png" href="static/logo.png">
