--- a/skins.html
+++ b/skins.html
@@ -16,7 +16,15 @@
         <meta name="theme-color" content="#013e79">
 
         <link rel="icon" type="image/png" href="static/logo.png">
-        <link rel='stylesheet' type='text/css' href='static/skinstyle.css#v3'>
+        <link rel='stylesheet' type='text/css' href='static/skinstyle.css#v4'>
+
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-8362785424135480",
+            enable_page_level_ads: true
+          });
+        </script>
     </head>
     <body>
         <header>
@@ -124,21 +132,20 @@
                 <span class="parthead">Feedback</span><br/>
                 <p>The Bonk Leagues Skin Manager is still not <b>fully</b> complete, and may be buggy at the moment.</p>
                 <p>If you encounter a bug, or want to give feedback, message @Finbae#2180 in the <a href="https://discord.gg/5SB5fYm" target="_blank">M4K Bonk.io Discord Server</a></p>
-                <p>Also, we are looking for any good skin makers to make some skins for the upcoming sample skins page (you will be credited!)</p>
+                <p>Also, we are always looking for any good skin makers to make some skins for the sample skins page (you will be credited!)</p>
             </div>
-
             <!--
-               skins
-               chaz: CgcDYQACCR0BAQEBAQEBAQoHBWFsAAEADT3MzM0AAAAAAAAAAAAAAAAAAAAAAAAKBQABAA0+TMzNAAAAAAAAAAAAAAAAAAAA+vr6CgUAAQANPpmZmgAAAAAAAAAAAAAAAAAAAAAAAAoFAAEASz4ZmZpCtAAAwKAAAAAAAAAAAAAAAAAKBQABAEs+GZmaQrQAAECgAAAAAAAAAAAAAAAACgUAAQBNPoAAAEK0AAAAAAAAAAAAAAAAAPr6+goFAAEADT9MzM0AAAAAAAAAAAAAAAAAAADGKCgAAAAA
-
-            -->
-
+            <div style="margin:0 auto;width:468px;height:60px;margin-top:50px;box-shadow:5px 5px 0px 0px #b30050;border:3px solid #fb016e;text-align:left;">
+                <span style="position:absolute;width:460px;color:#fb016e;font-weight:bold;font-size:15px;text-align:center;padding:3px;overflow:none;z-index:-999;">It looks like you have an ad-blocker on. To help support the development of Bonk Leagues and the Skin Manager, we'd like it if you would disable it &lt;3.</span>
+                <script data-cfasync='false' type='text/javascript' src='//p126242.clksite.com/adServe/banners?tid=126242_509091_0'></script>
+            </div>
+        -->
             <span style="position:fixed;bottom:15px;right:15px;font-size:16px;z-index:998;">website by Finbae<span style="font-size:11px;color:#666;">#2180</span></span>
         </section>
 
 
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <script src="static/md5.js"></script>
-        <script src="static/skinscript.js#v3"></script>
+        <script src="static/skinscript.js#v4"></script>
     </body>
 </html>
