Skin previews on my skins page <o/ dab on the haters

--- a/skins.html
+++ b/skins.html
@@ -16,7 +16,7 @@
         <meta name="theme-color" content="#013e79">
 
         <link rel="icon" type="image/png" href="static/logo.png">
-        <link rel='stylesheet' type='text/css' href='static/skinstyle.css#v4'>
+        <link rel='stylesheet' type='text/css' href='static/skinstyle.css#v5'>
 
         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <script>
@@ -44,7 +44,7 @@
                 <h1>WELCOME, <span class="s-name">X</span>!</h1><br/><br/>
                 <span class="parthead">My Skins</span><br/><br/>
                 <p id="txt-skin1" style="display:none">You have no saved skins yet. You can use the plus button to add one!<br/><br/>We recommend adding your current skin first.</p>
-                <div class="skincont" style="display:inline-block"></div><div class="skinslot" data-skin="addskin"><span>+</span></div>
+                <div class="skincont" style="display:inline-block"></div><div class="skinslot" data-skin="addskin"><span style="margin-left:20px;">+</span></div>
                 <br/>
                 <a class="button" style="font-size:24px;padding:5px 10px;animation:none;" onclick="window.location.reload(true)">Logout</a>
                 <br/><br/>
@@ -146,6 +146,6 @@
 
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <script src="static/md5.js"></script>
-        <script src="static/skinscript.js#v4"></script>
+        <script src="static/skinscript.js#v5"></script>
     </body>
 </html>
