Skin preview quality and loading speeds should be A LOT better now [SVG format]. Also, fixed a big bug that wouldn't let you pick certain skins from Sample Skins (also added 3 new sample skins!).

--- a/skins.html
+++ b/skins.html
@@ -16,7 +16,7 @@
         <meta name="theme-color" content="#013e79">
 
         <link rel="icon" type="image/png" href="static/logo.png">
-        <link rel='stylesheet' type='text/css' href='static/skinstyle.css#v5'>
+        <link rel='stylesheet' type='text/css' href='static/skinstyle.css#v6'>
 
         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <script>
@@ -96,7 +96,7 @@
 
             <div id="addskin2">
                 <span class="parthead">Adding skin</span><br/><br/>
-                <iframe id="sknframe2" class="sknframe"></iframe><br/><br/>
+                <img class="sknframe" id="sknframe2" type="image/svg+xml"><br/><br/>
                 <b>What would you like to name this skin?</b><br/><br/>
                 <input type="text" id="skn" maxlength="30" size="30" value="Skin"><br/>
                 <a id="svskin" class="button" style="font-size:24px;padding:5px 10px;margin-right:15px">Save Skin!</a><a class="button cancel" data-cancel="addskin2" style="font-size:24px;padding:5px 10px;">Cancel</a><br/><br/>
@@ -105,7 +105,7 @@
 
             <div id="editskin">
                 <span class="parthead">Editing skin</span><br/><br/>
-                <iframe id="sknframe" class="sknframe"></iframe><br/><br/>
+                <img class="sknframe" id="sknframe" type="image/svg+xml"><br/><br/>
                 Skin name: <input type="text" id="skne" maxlength="30" size="30"><br/><br/>
                 <a id="skncode" class="button" style="font-size:24px;padding:5px 10px;animation:none;">Get Skin Code</a>
                 <a id="aplskin" class="button" style="font-size:24px;padding:5px 10px;animation:none;">Apply skin on Bonk.io</a>
@@ -146,6 +146,6 @@
 
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <script src="static/md5.js"></script>
-        <script src="static/skinscript.js#v5"></script>
+        <script src="static/skinscript.js#v6"></script>
     </body>
 </html>
