You can sort the Quick Play list now, and it also displays more info like the date, L/D ratio and the #ID of it. https://i.imgur.com/pVB4ijV.png

--- a/client.html
+++ b/client.html
@@ -52,7 +52,7 @@
                 <p id="steptxt2">Don't worry! It won't take long. There are only <b>4</b> simple steps to take.</p>
                 <br/>
             </div>
-            <!--<a id="button">⇒ Play Now ⇐</a>-->
+            <!--<a id="buttonspec" class="button">⇒ Play Now ⇐</a>-->
             <b>
             The Bonk Leagues Client will be released very Soon<sup>TM</sup><br/>
             <span style="font-weight:400">To stay updated on the Client's development, you can join the <a href="https://discord.gg/5SB5fYm" target="_blank">M4K Bonk.io Discord Server</a>.<br/><br/>
