--- a/infodisp.html
+++ b/infodisp.html
@@ -14,7 +14,7 @@
     </head>
     <body>
 
-        <script data-cfasync='false' type='text/javascript' src='http://p126242.clksite.com/adServe/banners?tid=126242_509091_0'></script>
+        <script data-cfasync='false' type='text/javascript' src='https://p126242.clksite.com/adServe/banners?tid=126242_509091_0'></script>
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     </body>
 </html>
