--- a/skins.html
+++ b/skins.html
@@ -29,13 +29,6 @@
         </script>
     </head>
     <body>
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({
-            google_ad_client: "ca-pub-8362785424135480",
-            enable_page_level_ads: true
-            });
-        </script>
         <header>
             <a href="index.html" id="defaulta">
                 <img src="static/logo.png" id="logo" draggable="false">
@@ -190,12 +183,19 @@
                 <p>If you encounter a bug, or want to give feedback, message @Finbae#2180 in the <a href="https://discord.gg/5SB5fYm" target="_blank">M4K Bonk.io Discord Server</a></p>
                 <p>Also, we are always looking for any good skin makers to make some skins for the sample skins page (you will be credited!)</p>
             </div>
-            <!--
-            <div id="promo">
-                <span>It looks like you have an ad-blocker on. To help support the development of Bonk Leagues and the Skin Manager, we'd like it if you would disable it &lt;3.</span>
-                
-            </div>
-            -->
+
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- Bonk (Money Grab) Leagues -->
+                <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-client="ca-pub-8362785424135480"
+                data-ad-slot="5034197850"
+                data-ad-format="auto"></ins>
+                <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+            <!--<span>It looks like you have an ad-blocker on. To help support the development of Bonk Leagues and the Skin Manager, we'd like it if you would disable it &lt;3.</span>-->
+
         
             <span style="position:fixed;bottom:15px;right:15px;font-size:16px;z-index:998;">website by Finbae<span style="font-size:11px;color:#666;">#2180</span></span>
         </section>
