Update is finally out, enhanced ads on all pages as well as cleaner adblocker message (although you should disable adblock for bonk leagues, it good website)

--- a/client.html
+++ b/client.html
@@ -16,7 +16,7 @@
         <meta name="theme-color" content="#013e79">
 
         <link rel="icon" type="image/png" href="static/logo.png">
-        <link rel='stylesheet' type='text/css' href='static/style.css'>
+        <link rel='stylesheet' type='text/css' href='static/style.css#1'>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112446948-1"></script>
@@ -71,11 +71,27 @@
                 </ul>
             </div>
 
+            <br/><hr/><br/>
+
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- Bonk (Money Grab) Leagues -->
+                <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-client="ca-pub-8362785424135480"
+                data-ad-slot="5034197850"
+                data-ad-format="auto"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+            <div id="adbnote">It looks like you have an ad-blocker on.<br/><br/><b>To help support the development of Bonk Leagues and the Skin Manager, we'd like it if you would disable it &lt;3.</b></div>
+
+
             <span style="position:fixed;bottom:15px;right:15px;font-size:16px;z-index:998;">website by Finbae<span style="font-size:11px;color:#666;">#2180</span></span>            
         </section>
 
 
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-        <script src="static/script.js"></script>
+        <script src="static/bab.js"></script>
+        <script src="static/script.js#1"></script>
     </body>
 </html>
