--- a/skins.html
+++ b/skins.html
@@ -183,7 +183,7 @@
                 <p>If you encounter a bug, or want to give feedback, message @Finbae#2180 in the <a href="https://discord.gg/5SB5fYm" target="_blank">M4K Bonk.io Discord Server</a></p>
                 <p>Also, we are always looking for any good skin makers to make some skins for the sample skins page (you will be credited!)</p>
             </div>
-
+            <br/>
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <!-- Bonk (Money Grab) Leagues -->
                 <ins class="adsbygoogle"
@@ -194,15 +194,16 @@
                 <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
-            <!--<span>It looks like you have an ad-blocker on. To help support the development of Bonk Leagues and the Skin Manager, we'd like it if you would disable it &lt;3.</span>-->
+            <div id="adbnote">It looks like you have an ad-blocker on.<br/><br/><b>To help support the development of Bonk Leagues and the Skin Manager, we'd like it if you would disable it &lt;3.</b></div>
 
-        
+            
             <span style="position:fixed;bottom:15px;right:15px;font-size:16px;z-index:998;">website by Finbae<span style="font-size:11px;color:#666;">#2180</span></span>
         </section>
 
         <div id="overlay"></div>
 
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+        <script src="static/bab.js"></script>
         <script src="static/md5.js"></script>
         <script src="static/skineditor.js#v1"></script>
         <script src="static/skinscript.js#v8"></script>
